--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,59 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Yeseva+One&display=swap');
+
+.app{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  top: 0;
+  left: 0;
 }
 
-.App-logo {
-  height: 40vmin;
+/* Logo */
+
+.logo{
+  width: 200px;
+  height: 200px;
+  font-family: 'Yeseva One', cursive;
+  font-size: 2em;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Main Menu  */
+
+.mainMenu{
+  height: 90%;
+  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.menuItems{
+  height: 300px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  font-family: 'Playfair Display', serif;
 }
 
-.App-link {
-  color: #09d3ac;
+.photosMainBox{
+  height: 90%;
+  background-color: white;
+  display:flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow: scroll;
+}
+
+.photoMain{
+  margin: 0px 10px 0px 10px;
+  height: 100%;
 }
