--- a/src/Styles/albumMenu.css
+++ b/src/Styles/albumMenu.css
@@ -6,24 +6,14 @@
   transition: 0.7s;
 }
 
-.albums {
-  height: 300px;
+.albumsTabs {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: flex-end;
-  font-family: "Playfair Display", serif;
-  cursor: default;
 }
 
-.albumTabs {
-  max-height: 300px;
-  font-family: "Playfair Display", serif;
-  cursor: default;
-  border-left: solid lightgray 1px;
-}
-
-/* .menuItems {
+.albumMenuItems {
   height: 300px;
   width: 200px;
   display: flex;
@@ -33,21 +23,16 @@
   font-family: "Playfair Display", serif;
   cursor: default;
   transition: 1s;
-} */
+}
 
-.menuItems a {
+.albumMenuItems a {
   color: black;
   text-decoration: none;
 }
 
-.menuItems a {
-  transition: 0.5s;
+.albumMenuItems a:hover {
+  color: black;
   text-decoration: none;
-}
-
-.menuItems a:hover {
   opacity: 0.5;
-  transition: 0.5s;
-  color: black;
-  text-decoration: none;
+  transition: 300ms;
 }
