--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -2,31 +2,17 @@
 
 .app {
   position: fixed;
+  min-width: 350px;
   width: 100vw;
   height: 100vh;
-  display: flex;
-  align-items: center;
   background-color: white;
   top: 0;
   left: 0;
 }
 
-/* Logo */
-
-.logo {
-  width: 200px;
-  height: 200px;
-  font-family: "Yeseva One", cursive;
-  font-size: 2em;
-  color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 /* Main Menu  */
 
-.mainMenu {
+/* .mainMenu {
   height: 90%;
   display: flex;
   flex-direction: column;
@@ -36,7 +22,6 @@
 
 .menuItems {
   max-height: 300px;
-  width: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,7 +39,7 @@
 .menuHover:hover {
   opacity: 0.5;
   transition: 0.5s;
-}
+} */
 
 /* .albumsBox {
   height: 90%;
@@ -97,7 +82,7 @@
 .photoMain {
   height: 100%;
   /* width: 100%; */
-  padding: 0px 10px 0px 10px;
+  padding: 0px 10px 0px 0px;
   transition: 0.3s;
   overflow: scroll;
 }
