--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -62,29 +62,8 @@
   border-left: 1px solid rgba(0, 0, 0, 0.3);
 } */
 
-.photosMainBox {
-  height: 100%;
-  background-color: white;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  overflow: scroll;
-  transition: 0.7s;
-}
-
-@media (min-width: 1200px) {
-  .photosMainBox {
-    height: auto;
-  }
-}
-
-.photoMain {
-  height: 100%;
-  /* width: 100%; */
-  padding: 0px 10px 0px 0px;
-  transition: 0.3s;
-  overflow: scroll;
+.photo {
+  transition: 1s;
 }
 
 .kitBox {
@@ -112,14 +91,9 @@
 .contactBox {
   height: 90%;
   width: 0px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
   transition: 0.7s;
   overflow: scroll;
   font-family: "Playfair Display", serif;
-  align-items: flex-end;
   padding-bottom: 100px;
 }
 
