--- a/src/Styles/menu.css
+++ b/src/Styles/menu.css
@@ -38,11 +38,24 @@
   transition: 0.5s;
 } */
 
+.btn-primary {
+  color: #fff;
+  background-color: #2e4c80;
+  background-color: cutom-color;
+  border-color: #2e4c80;
+  border-color: cutom-cor;
+}
+
 .menuItem {
   font-size: small;
   transition: 0.5s;
   color: black;
   text-decoration: none;
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
 }
 
 .menuItem:hover {
@@ -72,8 +85,5 @@
   }
   .menuItems {
     max-height: 300px;
-  }
-  .menuItem {
-    /* font-size: 1.5em; */
   }
 }
